# Graphy

./: .gitignore  CLAUDE.md  Graphy.md  README.md
.github/workflows/: main.yml
graphy/: .gitignore  .vscodeignore  CHANGELOG.md  README.md  esbuild.js  package-lock.json  package.json  pyproject.toml  tsconfig.json
graphy/client/: extension.ts  test.ts
graphy/client/application/services/: AnalysisOrchestrationService.ts
graphy/client/commands/: GenerateGraphyCommand.ts  GenerateLineTraceCommand.ts
graphy/client/domain/entities/: FileStructure.ts
graphy/client/infrastructure/adapters/: FilesystemAdapter.ts
graphy/client/linelens/: LineLens.ts
graphy/server/: main.py  requirements.txt  setup.py
graphy/server/ai/config/: settings.py
graphy/server/ai/deepAgents/: todo.py
graphy/server/ai/tools/: codeSearch.py  globFileSearch.py  grep.py  listDirectories.py  readFile.py  tools.py
graphy/server/domain/entities/: file_structure.py
graphy/server/infrastructure/adapters/: filesystem_adapter.py
graphy/server/utils/: paths.py
graphy/src/: extension.ts
