[project]
name = "graphy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.30.0",
    "anthropic>=0.25.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "tiktoken>=0.7.0",
    "astroid>=3.0.0",
    "networkx>=3.0",
    "pygments>=2.15.0",
]
